confirmed nextFunction working to change html. styled css to make info overlap correctly.

--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,6 @@ body {
   font-family: var(--paragraph-font);
   color: var(--secondary-color);
   padding: 20px;
-  margin: 0 auto;
 }
 
 h1,
@@ -82,15 +81,35 @@ h3 {
 }
 
 .intro-text {
-  top: 111px;
+  top: -251px;
   padding-left: 30px;
+}
+
+.starter {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center; /* Centers the content horizontally */
+  align-items: left;
+  flex-direction: column; /* Aligns items under eachother */
+  padding-top: 30px;
+}
+
+.steps {
+  margin-top: -109px;
+  margin-left: 15px;
+}
+
+.instructions {
+  margin-top: -21px;
+  margin-left: 95px;
 }
 
 /* Header turn table styles */
 
 .header-image {
   position: relative;
-  margin-top: -200px;
+  top: 45px;
 }
 
 .turntable {
@@ -133,24 +152,11 @@ h3 {
 
 /* Main section */
 
-.starter {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center; /* Centers the content horizontally */
-  align-items: left;
-  flex-direction: column; /* Aligns items under eachother */
-  padding-top: 30px;
-}
 
-.steps {
-  margin-top: -39px;
-  margin-left: 15px;
-}
 
-.instructions {
-  margin-top: -21px;
-  margin-left: 95px;
+.step1 {
+  margin-top: 28px;
+  margin-left: 5px;
 }
 
 /* --------- Buttons */
@@ -177,7 +183,7 @@ h3 {
 
 /* Footer section */
 footer {
-  margin-top: 100px; /* Pushes the footer to the bottom */
+  margin-top: 250px; /* Pushes the footer to the bottom */
 }
 
 .footer-links {
